Mon Jul 11 23:18:17 CEST 2005	Michael Neumann	<mneumann@ntecs.de>

	* lib/wee/components/pager.rb, lib/wee/examples/pager.rb: Moved from examples 
	  into components directory. Slightly modified. Now class Wee::Pager.

	* lib/wee/components/login_decoration.rb (Wee::LoginDecoration): Initial
	  import.

	* lib/wee/components/component_dispatcher.rb (Wee::ComponentDispatcher):
	  Initial creation. 

	* lib/wee/components.rb: Load new components.

	* lib/wee/renderer/html/{brushes,canvas}.rb: Introduced
	  r.anchor.info(info_url) which can be used to specify the info part of a
		URL. 

Mon Jul 11 19:29:44 CEST 2005	Michael Neumann	<mneumann@ntecs.de>

	* lib/wee/renderer/html/{brushes,canvas}.rb: Added #hidden_input.	

	* lib/wee/adaptors/rails.rb: fixed some bugs. minor refactoring. 

	* lib/wee/adaptors/nitro.rb, examples/nitro/*: initial creation.

Mon Jul 11 17:02:40 CEST 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee.rb (Wee.run): Added method for easy startup of components. 

	* lib/wee/application.rb: Method Application#insert_new_request_handler
	  added. Refactored #handle_request a bit.

Mon Jul 11 16:06:49 CEST 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/snapshot_ext.rb: refactored. enhanced Hash to be snapshotable.

	* lib/wee/session.rb: fixed two bugs I lately introduced during refactoring

	* lib/wee/renderer/html/canvas.rb: added r.label

	* lib/wee/examples/{pager,counter,editable_counter,calculator}.rb: 
	  moved components from examples directory into Wee base. 

	* lib/wee.rb: increased version to 0.9.0. Introduced module Wee::Examples.

	* lib/wee/skeleton/og/components/main.rb: Minor cleanup.

	* lib/wee/databases/og/scaffolder.rb: removed whitespace.

Sat Jul  2 17:48:00 CEST 2005	Michael Neumann	<mneumann@ntecs.de>

	* lib/wee/adaptors/rails.rb: Integrate Wee components into RubyOnRails.
	  Very simple example:

			##
		  # In config/environment.rb add:

			require 'wee'
			require 'wee/adaptors/rails'