@@ -1,53 +1,0 @@
-class Wee::Window < Wee::Component
-
-  def initialize(title, pos, child)
-    super()
-    @title = title
-    @child = child
-    @status = :normal  
-    self.children << @child
-    @pos = pos
-  end
-
-  def process_callbacks(&block)
-    return if @status == :closed
-    super
-  end
-
-  def minimize
-    @status = :minimized
-  end
-
-  def maximize
-    @status = :normal
-  end
-
-  def close
-    @status = :closed
-  end
-
-  def render
-    return if @status == :closed
-
-    r.table.cellspacing(0).style("border:solid 1px grey; position: relative; top: #{@pos}; left: #{200+@pos.to_i}").with do
-      r.table_row.style("background-color: lightblue; width: 100%").with do
-        r.table_data.style("text-align: left; width: 66%").with(@title)
-        r.table_data.style("text-align: right").with do
-          if @status == :minimized
-            r.anchor.callback{maximize}.with("#")
-          else
-            r.anchor.callback{minimize}.with("_")
-          end
-          r.space
-          r.anchor.callback{close}.with("X")
-        end
-      end
-      r.table_row do
-        r.table_data.colspan(2).with do
-          r.render(@child) if @status == :normal
-        end
-      end
-    end
-  end
-
-end
